# bibby

./: Cargo.toml  Procfile  README.adoc  bot.toml  libera.der
addons/basic/: Cargo.toml
addons/basic/src/: main.rs
bot/: Cargo.toml
bot/src/: main.rs
model/: Cargo.toml
model/src/: lib.rs
