[package]
name = "basic"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[dependencies]
async-std = { version = "1", features = ["attributes"] }
model = { path = "../../model" }
pretty_env_logger = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tide = "0.15"
